# Quiniela-Mundialista

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
auth/: __init__.py  lockout.py  login.py
data/: __init__.py  avatars.py  database.py  models.py
provider/: __init__.py  api_football.py  balldontlie.py  base.py  models.py
scheduler/: __init__.py  poll_results.py  sync.py
scoring/: __init__.py  quiniela.py
scripts/: add_test_match.py  backfill_penalties.py  cron_daily_snapshot.sh  daily_snapshot.py  init_db.py  seed.py
tests/: test_admin.py  test_avatars.py  test_lockout.py  test_poll_results.py  test_quiniela.py  test_sync.py
ui/: __init__.py  admin.py  apuestas.py  hoy.py  manana.py  standings.py
