[project]
name = "quiniela-mundialista"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.0.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--asyncio-mode=auto"]
pythonpath = ["."]
